fix: offer CTA on mobile

--- a/src/styles/_annexes.styl
+++ b/src/styles/_annexes.styl
@@ -563,6 +563,7 @@ h3.h4.align-left
 	padding-left 3rem
 	text-align center
 	+bp-max(lg)
+		flex-basis auto
 		padding-left 0
 
 	.btn
